# QWidgetsCollection

./: CMakeLists.txt  README.md
CustomDialog/: CMakeLists.txt
CustomDialog/form/: mainwindow.ui
CustomDialog/resources/: app.qss  resources.qrc
CustomDialog/src/: custompushbutton.cpp  custompushbutton.h  main.cpp  mainwindow.cpp  mainwindow.h
CustomTableView/: CMakeLists.txt  README.md
CustomTableView/form/: mainwindow.ui
CustomTableView/resources/: resources.qrc
CustomTableView/src/: customitemmodel.cpp  customtableview.h  main.cpp  mainwindow.cpp
Dockwidgets/: CMakeLists.txt  default.qss  filelistnofocusdelegate.cpp  filelistnofocusdelegate.h  footageList.cpp  footageList.h  footageListDock.cpp  footageListDock.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nofocusdelegate.cpp  nofocusdelegate.h  resources.qrc  titlebar.cpp  titlebar.h
FlowLayout/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
OpenGLWidget/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
OverlayWidget/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  overlay.cpp  overlay.h
RubberBand/: CMakeLists.txt  customrubberband.cpp  customrubberband.h  main.cpp  mainwindow.cpp  mainwindow.h
resources/: app.qss
src/: customitemdelegate.cpp  customitemdelegate.h  customitemmodel.h  customtableview.cpp  mainwindow.cpp  mainwindow.h
